--- a/index.html
+++ b/index.html
@@ -24,6 +24,45 @@
 
 <body>
 
+<!-- Header -->
+
+<header>
+    <div class="header">
+        <div id="logo">
+            <h1>
+                <img src="assets/images/pequeno.png" width="40" class="d-inline-block align-top"
+                    alt="logo of Chef Prime">
+                <a href="index.html" aria-label="logo, go to the Home page">Chef Prime</a>
+            </h1>
+        </div>
+
+        <!-- Nav bar for medium and large screens -->
+        <div id="nav">
+            <ul class="large-screen">
+                <li><a href="index.html" aria-label="Go to the home page" class="current-page">Home</a></li>
+                <li><a href="gallery.html" aria-label="Go to the images gallery">Gallery</a></li>
+                <li><a href="contact.html" aria-label="Go to contact page">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- Nav bar for small screens (dropdown)-->
+    <div>
+        <input type="checkbox" id="toggler" name="toggler">
+        <label for="toggler" class="toggle-menu small-screen">
+            <span class="open"><i class="fa-solid fa-bars"></i></span>
+            <span class="close"><i class="fa-solid fa-x"></i></span>
+        </label>
+        <nav class="collapsing-nav">
+            <ul>
+                <li><a href="index.html" aria-label="Go to the home page" class="current-page">Home</a></li>
+                <li class="sub-container"><a href="gallery.html" aria-label="Go to the Galler page">Gallery</a></li>
+                <li><a href="contact.html" aria-label="Go to contact page">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+
 </body>
 
 </html>
