add a Hero area for all  pages

--- a/gallery.html
+++ b/gallery.html
@@ -39,8 +39,8 @@
             <!-- Nav bar for medium and large screens -->
             <div id="nav">
                 <ul class="large-screen">
-                    <li><a href="index.html" aria-label="Go to the home page" class="current-page">Home</a></li>
-                    <li><a href="gallery.html" aria-label="Go to the images gallery">Gallery</a></li>
+                    <li><a href="index.html" aria-label="Go to the home page">Home</a></li>
+                    <li><a href="gallery.html" aria-label="Go to the images gallery"  class="current-page">Gallery</a></li>
                     <li><a href="contact.html" aria-label="Go to contact page">Contact</a></li>
                 </ul>
             </div>
@@ -55,13 +55,23 @@
             </label>
             <nav class="collapsing-nav">
                 <ul>
-                    <li><a href="index.html" aria-label="Go to the home page" class="current-page">Home</a></li>
-                    <li class="sub-container"><a href="gallery.html" aria-label="Go to the Galler page">Gallery</a></li>
+                    <li><a href="index.html" aria-label="Go to the home page">Home</a></li>
+                    <li class="sub-container"><a href="gallery.html" aria-label="Go to the Galler page"  class="current-page">Gallery</a></li>
                     <li><a href="contact.html" aria-label="Go to contact page">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
+
+    <!-- Main Content -->
+    <div id="about" class="content" aria-labelledby="hero-image">
+        <div id="hero-image">
+            <div>
+                <h3 id="hero-text">
+                    Privet Chef's<br>
+                    in your Home or Event</h3>
+            </div>
+        </div>
 
 </body>
 
