--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@
     </div>
 </header>
 
+<!-- Main Content -->
+<div id="about" class="content" aria-labelledby="hero-image">
+    <div id="hero-image">
+        <div>
+            <h3 id="hero-text">
+                Privet Chef's<br>
+                in your Home or Event</h3>
+        </div>
+    </div>
+
 </body>
 
 </html>
