add a about section on Home page

--- a/index.html
+++ b/index.html
@@ -73,6 +73,29 @@
         </div>
     </div>
 
+    <!-- About section -->
+    <section id="about-algarve">
+        <div class="text-content">
+            <h1>Algarve</h1>
+            <p><b>Algarve</b> The Algarve, a region in the far south of Portugal, is known for its Mediterranean
+                beaches
+                and golf resorts. Its Mediterranean cuisine is also known throughout the world for the best and
+                tastiest gastronomy.
+                It's based on olive oil, grilled meats and fresh fish, caught on the day.
+            </p>
+        </div>
+    
+        <div class="text-content">
+            <h1>About Chef Prime</h1>
+            <p><b>Algarve Chef Prime's</b> aim is to provide a high gastronomy service to surprise someone special
+                or even your family, tomake a special event and why not take your vacation and not worry about
+                the menu? At Algarve Chef Prime you can choose just one meal a day or all the meals of your day,
+                and a chef will be on hand to do the necessary shopping and prepare the menus you've chosen for
+                your family's holiday.
+            </p>
+        </div>
+    </section>
+
 </body>
 
 </html>
