add a footer in all pages, and style

--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,28 @@
             </div>
         </div>
 
-        
+    <!-- Footer -->
+    <footer aria-labelledby="social">
+        <div id="social">
+            <ul>
+                <li><a href="https://www.linkedin.com/" aria-label="Find us on Linkedin (opens in new tab)" rel="noopener"
+                        target="linkedin"><i class="fa-brands fa-linkedin"></i></a></li>
+                <li><a href="https://www.instagram.com/" aria-label="Find us on Instagram (opens in new tab)" rel="noopener"
+                        target="instagram"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="https://www.facebook.com/" aria-label="Find us on Facebook (opens in new tab)" rel="noopener"
+                        target="facebook"><i class="fa-brands fa-square-facebook"></i></a></li>
+                <li><a href="https://www.tiktok.com/" aria-label="Find us on Tiktok (opens in new tab)" rel="noopener"
+                        target="tiktok"><i class="fa-brands fa-tiktok"></i></a></li>
+                <li><a href="https://www.youtube.com/" aria-label="Find us on Youtube (opens in new tab)" rel="noopener"
+                        target="youtube"><i class="fa-brands fa-youtube"></i></a></li>
+            </ul>
+            <br>
+            <h3>© Fernando Gonçalves 2023</h3>
+        </div>
+    </footer>
+    
+    <!-- Script always in the end of the page -->
+    <script src="https://kit.fontawesome.com/049d55f482.js" crossorigin="anonymous" defer></script>
 
 </body>
 
