Creat a services cards in index, and style

--- a/index.html
+++ b/index.html
@@ -96,6 +96,38 @@
         </div>
     </section>
 
+    <!-- Our Services card's -->
+    <h1 id="our-services">Our Services</H1>
+    <section>
+        <div id="services" aria-labelledby="our-services">
+            <div id="chef-home" class="card">
+                <div class="card-text-content">
+                    <h1>Chef in Home</h1>
+                    <p>A romantic evening where you want to surprise with haute cuisine.
+                        You'll have a chef just for your requests in the comfort of your own home.
+                    </p>
+                </div>
+            </div>
+    
+            <div id="events" class="card">
+                <div class="card-text-content">
+                    <h1>Event Planing</h1>
+                    <p>We can plan your event. From planning your menu to cooking and serving.
+                        If you want to surprise your guests, hire ourShow Cooking.
+                </div>
+            </div>
+            <div id="holidays" class="card">
+                <div class="card-text-content">
+                    <h1>Holidays Menu</h1>
+                    <p> Don't waste time with meals for your family. We take care of everything
+                        fromplanning your menu, shopping for the menu and cooking. That way you'll have more
+                        time for your holidays.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer aria-labelledby="social">
         <div id="social">
