change the hero-text and style

--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
             <div>
                 <h3 id="hero-text">
                     Privet Chef's<br>
-                    in your Home or Event</h3>
+                    Contact us!</h3>
             </div>
         </div>
 
