--- a/gallery.html
+++ b/gallery.html
@@ -68,8 +68,8 @@
             <div id="hero-image">
                 <div>
                     <h3 id="hero-text">
-                    Privet Chef's<br>
-                    in your Home or Event</h3>
+                        Privet Chef's<br>
+                        Gallery History</h3>
                 </div>
             </div>
 
