add images on gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -63,15 +63,26 @@
         </div>
     </header>
 
-    <!-- Main Content -->
-        <div id="about" class="content" aria-labelledby="hero-image">
-            <div id="hero-image">
-                <div>
-                    <h3 id="hero-text">
-                        Privet Chef's<br>
-                        Gallery History</h3>
-                </div>
+    <!-- Gallery Content -->
+    <div id="about" class="content" aria-labelledby="Privet Chef">
+        <div id="hero-image">
+            <div>
+                <h3 id="hero-text">
+                    Privet Chef's<br>
+                    Gallery History</h3>
             </div>
+        </div>
+        <section id="gallery">
+            <div id="photos">
+                <img src="assets/images/apetizer-table.avif" alt="table full of apetizers">
+                <img src="assets/images/cheese-boarde.avif" alt="Cheese plato with fruits">
+                <img src="assets/images/flour-hands.avif" alt="A chef playing with flour on the hands">
+                <img src="assets/images/meet-smash-table.avif" alt="Dinner dispossel on a table ready to disfrut">
+                <img src="assets/images/table-dish-gourmet.avif" alt="Dinner to be ready on a classit table and serving food">
+                <img src="assets/images/veal-mushroom.avif" alt="Veal meet with mushrooms and spinats">
+                <img src="assets/images/sopa_de_marisco.jpg" alt="Seafood Soup, ALGARVE style">
+            </div>
+        </section>
 
     <!-- Footer -->
     <footer aria-labelledby="social">
