add a video on booked page

--- a/booked.html
+++ b/booked.html
@@ -34,6 +34,14 @@
         </div>
     </header>
 
+    <!-- Video information-->
+    <div id="video">
+        <video src="assets/video/algarve-as-never-seen-before.mp4" type="video/mp4" autoplay controls></video>
+        <p>If you can not see the video <a href="assets/video/algarve-as-never-seen-before.mp4"
+                aria-label="click to open a video (opens in new tab)" target="_blank" rel="noopener" autoplay>Click Here</a>
+        </p>
+    </div>
+
 
     <!-- Booked confirmation message-->
     <div id="booking-confirmation">
