fixe problem with heroimag.in mobile

--- a/booked.html
+++ b/booked.html
@@ -25,9 +25,9 @@
 <body>
     <!-- Header without nav bar-->
     <header>
-        <div id="logo" class="logo-center">
+        <div id="logo" class="logocenter">
             <h1>
-                <img src="assets/images/pequeno.png" width="50" class="d-inline-block align-top"
+                <img src="assets/images/pequeno.png" class="logo-center"
                     alt="logo of Chef Prime">
                 <a href="index.html" aria-label="Go to homepage" id="logo">Chef Prime</a>
             </h1>
