--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
     <div class="header">
         <div id="logo">
             <h1>
-                <img src="assets/images/pequeno.png" width="40" class="d-inline-block align-top"
-                    alt="logo of Chef Prime">
+                <img src="assets/images/pequeno.png" class="logo-center" alt="logo of Chef Prime">
                 <a href="index.html" aria-label="logo, go to the Home page">Chef Prime</a>
             </h1>
         </div>
